--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,16 +1,16 @@
 name: Page Stats
 slug: page-stats
 type: plugin
-version: 0.1.2
-description: Enhaced statistics for grav
+version: 0.1.3
+description: Enhaced Analytics for grav
 icon: plug
 author:
   name: Nuno Costa
   email: info@codehaha.com
-homepage: https://github.com/nuno-costa/grav-plugin-page-stats
+homepage: https://github.com/francodacosta/grav-plugin-page-stats
 keywords: grav, plugin, analytics, statistics
-bugs: https://github.com/nuno-costa/grav-plugin-page-stats/issues
-docs: https://github.com/nuno-costa/grav-plugin-page-stats/blob/develop/README.md
+bugs: https://github.com/francodacosta/grav-plugin-page-stats/issues
+docs: https://github.com/francodacosta/grav-plugin-page-stats/blob/master/README.md
 license: MIT
 
 dependencies:
