--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -55,3 +55,25 @@ form:
         0: PLUGIN_ADMIN.DISABLED
       validate:
         type: bool
+    show_top_users_widget:
+      type: toggle
+      label: PLUGIN_PAGE_STATS.SHOW_TOP_USERS_WIDGET_LABEL
+      help: PLUGIN_PAGE_STATS.SHOW_TOP_USERS_WIDGET_HELP
+      highlight: 1
+      default: 1
+      options:
+        1: PLUGIN_ADMIN.ENABLED
+        0: PLUGIN_ADMIN.DISABLED
+      validate:
+        type: bool
+    show_unique_users_widget:
+      type: toggle
+      label: PLUGIN_PAGE_STATS.SHOW_UNIQUE_USERS_WIDGET_LABEL
+      help: PLUGIN_PAGE_STATS.SHOW_UNIQUE_USERS_WIDGET_HELP
+      highlight: 1
+      default: 1
+      options:
+        1: PLUGIN_ADMIN.ENABLED
+        0: PLUGIN_ADMIN.DISABLED
+      validate:
+        type: bool
