--- a/languages.yaml
+++ b/languages.yaml
@@ -17,3 +17,7 @@ en:
 
     SHOW_UNIQUE_USERS_WIDGET_LABEL: Show Unique Users Widget
     SHOW_UNIQUE_USERS_WIDGET_HELP: If enabled the Unique Users Widget will be visible on the overview page
+
+    IGNORED_IPS_LABEL: "IP's to ignore"
+    IGNORED_IPS_HELP: "IP's in this list will be ignored, you can use regular expressions or normal IP dotter notation (eg: 127.0.0.1 or 127.*)"
+    IP: "IP or Regular Expression"
