--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,7 +1,7 @@
 name: Page Stats
 slug: page-stats
 type: plugin
-version: 1.1.0
+version: 1.2.0
 description: Enhaced Analytics for grav
 icon: plug
 author:
@@ -58,6 +58,25 @@ form:
                                 0: PLUGIN_ADMIN.DISABLED
                             validate:
                                 type: bool
+                        cols_top_users_widget:
+                            type: select
+                            label: PLUGIN_PAGE_STATS.WIDGET_SIZE_LABEL
+                            help: PLUGIN_PAGE_STATS.WIDGET_SIZE_HELP
+                            default: 4
+                            options:
+                                1 : 1
+                                2 : 2
+                                3 : 3
+                                4 : 4
+                                5 : 5
+                                6 : 6
+                                7 : 7
+                                8 : 8
+                                9 : 9
+                                10 : 10
+                                11 : 11
+                                12 : 12
+
                 fs2:
                     type: fieldset
                     title: PLUGIN_PAGE_STATS.UNIQUE_USERS_WIDGET
@@ -75,6 +94,25 @@ form:
                                 0: PLUGIN_ADMIN.DISABLED
                             validate:
                                 type: bool
+                        cols_unique_users_widget:
+                            type: select
+                            label: PLUGIN_PAGE_STATS.WIDGET_SIZE_LABEL
+                            help: PLUGIN_PAGE_STATS.WIDGET_SIZE_HELP
+                            default: 4
+                            options:
+                                1 : 1
+                                2 : 2
+                                3 : 3
+                                4 : 4
+                                5 : 5
+                                6 : 6
+                                7 : 7
+                                8 : 8
+                                9 : 9
+                                10 : 10
+                                11 : 11
+                                12 : 12
+
 
                 fs3:
                     type: fieldset
@@ -93,6 +131,24 @@ form:
                                 0: PLUGIN_ADMIN.DISABLED
                             validate:
                                 type: bool
+                        cols_unique_visitors_widget:
+                            type: select
+                            label: PLUGIN_PAGE_STATS.WIDGET_SIZE_LABEL
+                            help: PLUGIN_PAGE_STATS.WIDGET_SIZE_HELP
+                            default: 4
+                            options:
+                                1 : 1
+                                2 : 2
+                                3 : 3
+                                4 : 4
+                                5 : 5
+                                6 : 6
+                                7 : 7
+                                8 : 8
+                                9 : 9
+                                10 : 10
+                                11 : 11
+                                12 : 12
                 fs4:
                     type: fieldset
                     title: PLUGIN_PAGE_STATS.PAGE_VIEWS_WIDGET
@@ -110,6 +166,24 @@ form:
                                 0: PLUGIN_ADMIN.DISABLED
                             validate:
                                 type: bool
+                        cols_page_views_widget:
+                            type: select
+                            label: PLUGIN_PAGE_STATS.WIDGET_SIZE_LABEL
+                            help: PLUGIN_PAGE_STATS.WIDGET_SIZE_HELP
+                            default: 4
+                            options:
+                                1 : 1
+                                2 : 2
+                                3 : 3
+                                4 : 4
+                                5 : 5
+                                6 : 6
+                                7 : 7
+                                8 : 8
+                                9 : 9
+                                10 : 10
+                                11 : 11
+                                12 : 12
 
 
         section_behaviour:
