feat: configure viewed pages
* Enable / Disable Recently viewed Pages widget
* Widget Size
* Number of records to fetch

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -151,7 +151,7 @@ form:
                                 12 : 12
                 fs4:
                     type: fieldset
-                    title: PLUGIN_PAGE_STATS.PAGE_VIEWS_WIDGET
+                    title: PLUGIN_PAGE_STATS.RECENTLY_VIEWED_PAGES
                     collapsed: false      # Initial state of fieldset (see collapsible option)
                     collapsible: true    # Whether one can expand the fieldset or not
                     fields:
@@ -184,6 +184,45 @@ form:
                                 10 : 10
                                 11 : 11
                                 12 : 12
+                fs5:
+                    type: fieldset
+                    title: PLUGIN_PAGE_STATS.RECENTLY_VIEWED_PAGES
+                    collapsed: false      # Initial state of fieldset (see collapsible option)
+                    collapsible: true    # Whether one can expand the fieldset or not
+                    fields:
+                        show_recently_viewed_pages:
+                            type: toggle
+                            label: PLUGIN_PAGE_STATS.SHOW_RECENTLY_VIEWED_PAGES_LABEL
+                            help: PLUGIN_PAGE_STATS.SHOW_RECENTLY_VIEWED_PAGES_HELP
+                            highlight: 1
+                            default: 1
+                            options:
+                                1: PLUGIN_ADMIN.ENABLED
+                                0: PLUGIN_ADMIN.DISABLED
+                            validate:
+                                type: bool
+                        cols_recently_viewed_pages:
+                            type: select
+                            label: PLUGIN_PAGE_STATS.WIDGET_SIZE_LABEL
+                            help: PLUGIN_PAGE_STATS.WIDGET_SIZE_HELP
+                            default: 4
+                            options:
+                                1 : 1
+                                2 : 2
+                                3 : 3
+                                4 : 4
+                                5 : 5
+                                6 : 6
+                                7 : 7
+                                8 : 8
+                                9 : 9
+                                10 : 10
+                                11 : 11
+                                12 : 12
+                        limit_recently_viewed_pages:
+                            type: number
+                            label: PLUGIN_PAGE_STATS.SQL_LIMIT_LABEL
+                            help: PLUGIN_PAGE_STATS.SQL_LIMIT_HELP
 
 
         section_behaviour:
