--- a/languages.yaml
+++ b/languages.yaml
@@ -28,6 +28,10 @@ en:
     SHOW_PAGE_VIEWS_WIDGET_LABEL: Show Page Views Widget
     SHOW_PAGE_VIEWS_WIDGET_HELP: If enabled the Page Views Widget will be visible on the overview page
 
+    RECENTLY_VIEWED_PAGES: Recently Viewed Pages
+    SHOW_RECENTLY_VIEWED_PAGES_LABEL: Show Recently Viewed Pages Widget
+    SHOW_RECENTLY_VIEWED_PAGES_HELP: If enabled the Recently Viewed Pages Widget will be visible on the overview page
+
     IGNORED_IPS_LABEL: "IP's to ignore"
     IGNORED_IPS_HELP: "IP's in this list will be ignored, you can use regular expressions or normal IP dotter notation (eg: 127.0.0.1 or 127.*)"
     IP: "IP or Regular Expression"
@@ -40,3 +44,9 @@ en:
 
     WIDGET_SIZE_LABEL: Widget Size
     WIDGET_SIZE_HELP: The number of Columns the widget will use to wender itself
+
+    SQL_LIMIT_LABEL: Records to Show
+    SQL_LIMIT_HELP: The number of records to show dor this widget
+
+
+
