--- a/page-stats.yaml
+++ b/page-stats.yaml
@@ -24,4 +24,8 @@ show_recently_viewed_pages: true
 cols_recently_viewed_pages: 12
 limit_recently_viewed_pages: 15
 
+show_top_pages: true
+cols_top_pages: 12
+limit_top_pages_pages: 15
+
 
