--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -228,6 +228,46 @@ form:
                             label: PLUGIN_PAGE_STATS.SQL_LIMIT_LABEL
                             help: PLUGIN_PAGE_STATS.SQL_LIMIT_HELP
 
+                fs6:
+                    type: fieldset
+                    title: PLUGIN_PAGE_STATS.TOP_PAGES
+                    collapsed: false      # Initial state of fieldset (see collapsible option)
+                    collapsible: true    # Whether one can expand the fieldset or not
+                    fields:
+                        show_top_pages:
+                            type: toggle
+                            label: PLUGIN_PAGE_STATS.SHOW_TOP_PAGES_LABEL
+                            help: PLUGIN_PAGE_STATS.SHOW_TOP_PAGES_HELP
+                            highlight: 1
+                            default: 1
+                            options:
+                                1: PLUGIN_ADMIN.ENABLED
+                                0: PLUGIN_ADMIN.DISABLED
+                            validate:
+                                type: bool
+                        cols_top_pages:
+                            type: select
+                            label: PLUGIN_PAGE_STATS.WIDGET_SIZE_LABEL
+                            help: PLUGIN_PAGE_STATS.WIDGET_SIZE_HELP
+                            default: 4
+                            options:
+                                1 : 1
+                                2 : 2
+                                3 : 3
+                                4 : 4
+                                5 : 5
+                                6 : 6
+                                7 : 7
+                                8 : 8
+                                9 : 9
+                                10 : 10
+                                11 : 11
+                                12 : 12
+                        limit_top_pages_pages:
+                            type: number
+                            label: PLUGIN_PAGE_STATS.SQL_LIMIT_LABEL
+                            help: PLUGIN_PAGE_STATS.SQL_LIMIT_HELP
+
 
         section_behaviour:
             type: section
