feat: top countries

--- a/page-stats.yaml
+++ b/page-stats.yaml
@@ -29,4 +29,8 @@ show_top_pages: true
 cols_top_pages: 12
 limit_top_pages_pages: 15
 
+show_top_countries: true
+cols_top_countries: 4
+limit_top_countries: 10
+
 
