--- a/languages.yaml
+++ b/languages.yaml
@@ -33,16 +33,20 @@ en:
     SHOW_RECENTLY_VIEWED_PAGES_HELP: If enabled the Recently Viewed Pages Widget will be visible on the overview page
 
     TOP_PAGES: Top Pages
-    SHOW_TOP_PAGES_LABEL: Show Top Pages Pages Widget
-    SHOW_TOP_PAGES_HELP: If enabled the Top Pages Pages Widget will be visible on the overview page
+    SHOW_TOP_PAGES_LABEL: Show Top Pages Widget
+    SHOW_TOP_PAGES_HELP: If enabled the Top Pages  Widget will be visible on the overview page
 
     TOP_BROWSERS: Top Browsers
-    SHOW_TOP_BROWSERS_LABEL: Show Top Browsers Pages Widget
-    SHOW_TOP_BROWSERS_HELP: If enabled the Top Browsers Pages Widget will be visible on the overview page
+    SHOW_TOP_BROWSERS_LABEL: Show Top Browsers Widget
+    SHOW_TOP_BROWSERS_HELP: If enabled the Top Browsers  Widget will be visible on the overview page
 
     TOP_COUNTRIES: Top Countries
-    SHOW_TOP_COUNTRIES_LABEL: Show Top Countries Pages Widget
-    SHOW_TOP_COUNTRIES_HELP: If enabled the Top Countries Pages Widget will be visible on the overview page
+    SHOW_TOP_COUNTRIES_LABEL: Show Top Countries Widget
+    SHOW_TOP_COUNTRIES_HELP: If enabled the Top Countries  Widget will be visible on the overview page
+
+    TOP_PLATFORMS: Top Platforms
+    SHOW_TOP_PLATFORMS_LABEL: Show Top Platforms Widget
+    SHOW_TOP_PLATFORMS_HELP: If enabled the Top Platforms (Operating Systems)  Widget will be visible on the overview page
 
     IGNORED_IPS_LABEL: "IP's to ignore"
     IGNORED_IPS_HELP: "IP's in this list will be ignored, you can use regular expressions or normal IP dotter notation (eg: 127.0.0.1 or 127.*)"
