--- a/page-stats.yaml
+++ b/page-stats.yaml
@@ -37,4 +37,8 @@ show_top_browsers: true
 cols_top_browsers: 2
 limit_top_browsers: 10
 
+show_top_platforms: true
+cols_top_platforms: 2
+limit_top_platforms: 10
+
 
