--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,7 +1,7 @@
 name: Page Stats
 slug: page-stats
 type: plugin
-version: 1.6.1
+version: 1.7.0
 description: Enhaced Analytics for grav
 icon: plug
 author:
@@ -382,7 +382,45 @@ form:
                             type: number
                             label: PLUGIN_PAGE_STATS.SQL_LIMIT_LABEL
                             help: PLUGIN_PAGE_STATS.SQL_LIMIT_HELP
-
+                fs10:
+                    type: fieldset
+                    title: PLUGIN_PAGE_STATS.PAGE_DETAILS.RECENT_VIEWS
+                    collapsed: false      # Initial state of fieldset (see collapsible option)
+                    collapsible: true    # Whether one can expand the fieldset or not
+                    fields:
+                        show_pagedetails_recent_views:
+                            type: toggle
+                            label: PLUGIN_PAGE_STATS.PAGE_DETAILS.RECENT_VIEWS_LABEL
+                            help: PLUGIN_PAGE_STATS.PAGE_DETAILS.RECENT_VIEWS_HELP
+                            highlight: 1
+                            default: 1
+                            options:
+                                1: PLUGIN_ADMIN.ENABLED
+                                0: PLUGIN_ADMIN.DISABLED
+                            validate:
+                                type: bool
+                        cols_pagedetails_recent_views:
+                            type: select
+                            label: PLUGIN_PAGE_STATS.WIDGET_SIZE_LABEL
+                            help: PLUGIN_PAGE_STATS.WIDGET_SIZE_HELP
+                            options:
+                                1 : 1
+                                2 : 2
+                                3 : 3
+                                4 : 4
+                                5 : 5
+                                6 : 6
+                                7 : 7
+                                8 : 8
+                                9 : 9
+                                10 : 10
+                                11 : 11
+                                12 : 12
+                        limit_pagedetails_recent_views:
+                            type: number
+                            label: PLUGIN_PAGE_STATS.SQL_LIMIT_LABEL
+                            help: PLUGIN_PAGE_STATS.SQL_LIMIT_HELP
+                
 
 
         section_behaviour:
