--- a/page-stats.yaml
+++ b/page-stats.yaml
@@ -4,6 +4,7 @@ ignore_errors: true
 log_admin: true
 log_bot: true
 
+collector_ping_interval: 10
 
 show_top_users_widget: true
 cols_top_users_widget: 'col-12 col-md-3'
